# source_os

./: Cargo.toml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: apic.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  serial.rs
kernel/src/allocator/: fixed_size_block.rs  mod.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs
src/: main.rs
